Fixed the list expanding when sorting the users, hovering over list elements in dark mode now has a gray background, you can always see how many results there are

--- a/styles.css
+++ b/styles.css
@@ -23,4 +23,5 @@ body:not(.dark-mode) .list-group-item{
 }
 body.dark-mode .list-group-item:hover{
     color: #121212;
+    background-color: lightgrey;
 }
